Upgrade Fontawesome Pro to 5.6

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -63,10 +63,7 @@
 
 .container{
 	width: 60%;
-	margin: 5% 20%;
-	margin-top: @header_height;
-	float: left;
-	display: block;
+	margin: @header_height 20%;
 
 	.box {
 		display: flex;
@@ -471,7 +468,7 @@
 		margin-bottom: 15px;
 
 		i {
-			font-size: @fontsize_normal * 1.5;
+			font-size: @fontsize_normal * 1.25;
 			padding: 0;
 			color: @border_color_hover;
 
@@ -488,8 +485,7 @@
 
 .device-info{
 	width: 40%;
-	margin: 80px 30%;
-	margin-top: @header_height;
+	margin: @header_height 30%;
 	display: flex;
 	flex-direction: column;
 
