--- a/app/less/style.less
+++ b/app/less/style.less
@@ -502,7 +502,7 @@
 			color: @primary_color;
 
 			&.over {
-				color: @second_color;
+				color: @red_color;
 			}
 		}
 
@@ -545,10 +545,10 @@
 			}
 
 			&.highest {
-				.over { color: @second_color; }
+				.over { color: @red_color; }
 			}
 			&.lowest {
-				.over { color: @second_color; }
+				.over { color: @red_color; }
 			}
 		}
 	}
@@ -739,17 +739,17 @@
 		float: left;
 		display: block;
 		font-size: 5em;
-		color: @bg_color_light;
+		color: @border_color_hover;
 	}
-	.msg{
+	.msg {
 		width: 100%;
 		margin-bottom: 8%;
 		float: left;
 		display: block;
 		font-size: 2em;
-		color: @text_active_color;
+		color: @text_color_normal;
 	}
-	.control{
+	.control {
 		width: 100%;
 		float: left;
 		display: block;
