--- a/app/less/style.less
+++ b/app/less/style.less
@@ -7,6 +7,7 @@
 @fontsize_input: 1.2em;
 @fontsize_icon: 1.8em;
 @header_height: 100px;
+@radius: 7px;
 
 .header {
 	width: 80%;
@@ -122,7 +123,7 @@
 				margin-bottom: 2.66%;
 				height: 170px;
 				text-decoration: none;
-				border-radius: 7px;
+				border-radius: @radius;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
@@ -328,7 +329,7 @@
 			background: @border_color;
 			color: @primary_color;
 			margin: 0%;
-			border-radius: 5px;
+			border-radius: @radius;
 			box-sizing: border-box;
 			border: 2px solid @border_color;
 			resize: none;
@@ -363,7 +364,7 @@
 			padding: 16px 0;
 			margin: 0%;
 			margin-top: 15px;
-			border-radius: 5px;
+			border-radius: @radius;
 			background: @primary_color;
 			color: @bg_color;
 			font-size: @fontsize_input;
@@ -421,7 +422,7 @@
 			display: flex;
 			flex-direction: column;
 			border: 2px solid @border_color;
-			border-radius: 5px;
+			border-radius: @radius;
 			font-size: 1.2em;
 			margin-bottom: 10px;
 
@@ -527,7 +528,7 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
-			border-radius: 7px;
+			border-radius: @radius;
 			box-sizing: border-box;
 
 			&:nth-child(3n+0) {
@@ -577,7 +578,7 @@
 		display: flex;
 		flex-direction: column;
 		box-sizing: border-box;
-		border-radius: 10px;
+		border-radius: @radius;
 		background: @border_color;
 
 		.logitems {
@@ -670,7 +671,7 @@
 		text-decoration: none;
 		background: @border_color;
 		color: @border_color_hover;
-		border-radius: 5px;
+		border-radius: @radius;
 	}
 }
 
@@ -723,44 +724,51 @@
 }
 
 .message-box {
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
-	padding: 12% 0%;
-	float: left;
-	display: block;
-	text-align: center;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
 	&.-minibox{
 		padding: 8% 0%;
 		.msg{ margin-bottom: 4%; }
 	}
 
-	.icon{
-		width: 100%;
-		float: left;
-		display: block;
-		font-size: 5em;
+	.icon {
+		font-size: @fontsize_topic;
 		color: @border_color_hover;
 	}
 	.msg {
-		width: 100%;
-		margin-bottom: 8%;
-		float: left;
-		display: block;
-		font-size: 2em;
+		font-size: @fontsize_topic;
 		color: @text_color_normal;
+		margin-bottom: 25px;
+
+		strong {
+			color: @text_color_normal;
+		}
 	}
 	.control {
-		width: 100%;
-		float: left;
-		display: block;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
 
-		a.btn{
+		a.btn {
 			text-decoration: none;
 			background: @primary_color;
 			color: @primary_color_dark;
-			padding: 10px 25px;
-			margin: 5px;
-			border-radius: 2px;
+			color: #FFFFFF;
+			font-size: @fontsize_input;
+			font-family: initial;
+			padding: 16px;
+			margin: 0 10px;
+			font-weight: bold;
+			border-radius: @radius;
+			display: block;
 
 			i { margin-left: 10px; }
 
