--- a/app/less/style.less
+++ b/app/less/style.less
@@ -23,7 +23,7 @@
 		font-size: @fontsize_icon;
 		width: @header_height;
 		height: @header_height;
-		color: @primary_color;
+		color: @border_color_hover;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -487,6 +487,7 @@
 .device-info{
 	width: 40%;
 	margin: @header_height 30%;
+	margin-top: @header_height / 2;
 	display: flex;
 	flex-direction: column;
 
@@ -663,7 +664,7 @@
 
 	i {
 		margin-right: 5px;
-		color: @primary_color;
+		color: @border_color_hover;
 	}
 
 	a {
@@ -806,7 +807,7 @@
 }
 /* Other Device and Screen */
 @media only screen and (min-width:1910px) {@import "style-1920";}
-@media only screen and (min-width:1024px) and (max-width:1365px){@import "style-1024-1366";}
-@media only screen and (min-width:760px) and (max-width:1023px){@import "style-760-1023";}
-@media only screen and (min-width:520px) and (max-width:759px){@import "style-520-759";}
-@media only screen and (min-width:0px) and (max-width :519px){@import "style-0-519";}
+@media only screen and (min-width:1024px) and (max-width:1365px) {@import "style-1024-1366";}
+@media only screen and (min-width:760px) and (max-width:1023px) {@import "style-760-1023";}
+@media only screen and (min-width:520px) and (max-width:759px) {@import "style-520-759";}
+@media only screen and (min-width:0px) and (max-width :519px) {@import "style-0-519";}
