--- a/app/less/style.less
+++ b/app/less/style.less
@@ -66,6 +66,23 @@
 	width: 60%;
 	margin: @header_height 20%;
 
+	.box-empty {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		height: 400px;
+
+		a {
+			color: @primary_color;
+			font-size: @fontsize_normal;
+			border: 2px dashed @primary_color_light;
+			text-decoration: none;
+			border-radius: @radius;
+			padding: 14px 28px;
+		}
+	}
+
 	.box {
 		display: flex;
 		flex-direction: column;
@@ -102,7 +119,9 @@
 				&.first-right {
 					margin-left: auto;
 				}
-
+				.fa-exclamation-circle {
+					color: @red_color;
+				}
 				&:hover {
 					color: @text_color_normal;
 				}
@@ -656,7 +675,7 @@
 	width: 60%;
 	margin: 0 20%;
 	margin-bottom: 2%;
-	color: @text_color_normal;
+	color: @border_color_hover;
 	display: flex;
 	font-size: @fontsize_mini;
 	flex-direction: row;
@@ -664,7 +683,6 @@
 
 	i {
 		margin-right: 5px;
-		color: @border_color_hover;
 	}
 
 	a {
