--- a/app/less/style.less
+++ b/app/less/style.less
@@ -150,6 +150,7 @@
 				background: @border_color;
 				color: @border_color_hover;
 				.transitionAnimation(0.3s);
+				.BoxShadow();
 
 				&:hover {
 					transform: translateY(-5px);
@@ -161,6 +162,7 @@
 					color: @border_color_hover;
 					font-size: @fontsize_normal;
 					align-items: center;
+					box-shadow: none;
 
 					&:hover {
 						transform: initial;
@@ -351,6 +353,7 @@
 			box-sizing: border-box;
 			border: 2px solid @border_color;
 			resize: none;
+			.BoxShadow();
 			
 			&.loading {
 				background: transparent;
@@ -387,6 +390,7 @@
 			color: @bg_color;
 			font-size: @fontsize_input;
 			font-weight: bold;
+			.BoxShadow();
 
 			i {
 				margin-left: 10px;
@@ -401,10 +405,12 @@
 			&.loading {
 				background: @border_color;
 				color: @border_color_hover;
+				box-shadow: none;
 			}
 
 			&.completed {
 				background: @green_color;
+				box-shadow: none;
 			}
 		}
 
@@ -493,6 +499,7 @@
 
 			&.fa-toggle-on {
 				color: @primary_color;
+				text-shadow: 1px 2px 3px rgba(0,0,0,0.2);
 			}
 
 			&:hover {
@@ -549,6 +556,7 @@
 			justify-content: center;
 			border-radius: @radius;
 			box-sizing: border-box;
+			.BoxShadow();
 
 			&:nth-child(3n+0) {
 				margin-right: 0%;
@@ -599,6 +607,7 @@
 		box-sizing: border-box;
 		border-radius: @radius;
 		background: @border_color;
+		.BoxShadow();
 
 		.logitems {
 			display: flex;
