--- a/app/less/config.less
+++ b/app/less/config.less
@@ -60,6 +60,9 @@ body {
 .BoxShadowHelper(@level) when (@level = 5) {
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
+.BoxShadow() {
+    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+}
 @-webkit-keyframes bounce {
     0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
     40% {-webkit-transform: translateY(-10px);}
