--- a/app/css/style.css
+++ b/app/css/style.css
@@ -187,11 +187,6 @@ body {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
 }
-.animated {
-  -webkit-transition: height 0.2s;
-  -moz-transition: height 0.2s;
-  transition: height 0.2s;
-}
 .header {
   width: 80%;
   padding: 0 10%;
@@ -498,7 +493,10 @@ body {
   box-sizing: border-box;
   border: 2px solid #eceff1;
   resize: none;
-  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
 .form .form-items .input-text.loading,
 .form .form-items .input-textarea.loading {
@@ -511,7 +509,8 @@ body {
 }
 .form .form-items .input-text:focus,
 .form .form-items .input-textarea:focus {
-  border: 2px solid #b0bec5;
+  border: 2px solid #2962ff;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
 }
 .form .form-items .input-text:disabled,
 .form .form-items .input-textarea:disabled {
@@ -657,6 +656,9 @@ body {
   font-size: 1.2em;
   color: #b0bec5;
 }
+.device-info .info:hover {
+  cursor: default;
+}
 .device-info .temperature-stat {
   display: flex;
   flex-direction: row;
@@ -693,6 +695,9 @@ body {
 }
 .device-info .temperature-stat .box.lowest .over {
   color: #ff1744;
+}
+.device-info .temperature-stat .box:hover {
+  cursor: default;
 }
 .device-info .graph {
   width: 100%;
@@ -732,7 +737,7 @@ body {
   border-bottom: 0;
 }
 .device-info .history .logitems:hover {
-  cursor: pointer;
+  cursor: default;
 }
 .device-info .history .logitems.alert .status {
   color: #ff1744;
@@ -811,10 +816,10 @@ body {
 }
 #loading-bar {
   position: fixed;
-  top: 0;
+  top: 5px;
   left: 0;
   width: 5%;
-  height: 2px;
+  height: 3px;
   border-radius: 20%;
   background: #2962ff;
   float: left;
@@ -825,7 +830,7 @@ body {
   -webkit-transition: all 10s ease-in-out;
   -o-transition: all 10s ease-in-out;
 }
-#loading-bar.-action {
+#loading-bar.action {
   transform: translateX(1900%);
 }
 #filter {
@@ -918,7 +923,7 @@ body {
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
 }
-#disconnect-bar.-active {
+#disconnect-bar.active {
   transform: translateY(-100%);
 }
 #disconnect-bar i {
